--- a/Gym/Gym.vcxproj
+++ b/Gym/Gym.vcxproj
@@ -102,8 +102,9 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -133,7 +134,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cal_date.h" />
-    <ClInclude Include="date.h" />
     <ClInclude Include="Health.h" />
     <ClInclude Include="Membership.h" />
   </ItemGroup>
