--- a/Gym/Gym.vcxproj
+++ b/Gym/Gym.vcxproj
@@ -129,11 +129,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Gym.cpp" />
-    <ClCompile Include="Healthcpp.cpp" />
+    <ClCompile Include="Info.cpp" />
     <ClCompile Include="Membership.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Health.h" />
+    <ClInclude Include="Info.h" />
     <ClInclude Include="Membership.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
